mejoras en todos css y html de la web. Se han añadido "alt", establecido root fijo en todos, cambio de px a rem, mejora de proporciones y tamaños, cambios en el color y se ha hecho una revisión general del contenido

--- a/src/css/404file.css
+++ b/src/css/404file.css
@@ -1,4 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap%27");
+:root {
+  --orange: #f9b225;
+  --yellow: #ffe194;
+  --black: #3f3d3b;
+  --white: white;
+  --grey: #c4c4c4;
+  --lightgrey: #f5f5f5;
+  --green: #015865;
+  --title-font: "Dosis";
+  --text-font: "Open Sans";
+}
 
 * {
   margin: 0;
@@ -34,44 +44,37 @@ section {
   flex-direction: column;
 }
 
-.semi-bold {
+span {
   font-weight: 700;
 }
 
 h2 {
+  font-size: 1.25rem;
   font-weight: 400;
   line-height: 1rem;
   text-align: center;
 }
 
-.img-pug{
+.img-pug {
   width: 50%;
   height: auto;
 }
 
-
-button {
+.button {
   padding: 0.5rem 3rem;
   border-radius: 3rem;
   font-weight: 600;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 1.2rem;
   color: white;
-  background-color: #d11149;
+  background-color: var(--green);
   margin-top: 3rem;
   cursor: pointer;
-  border: none;
 }
 
-a {
-  text-decoration-line: none;
-}
-
-a:hover {
-  color: #d11149;
-}
-
-button:hover {
+.button:hover {
+  color: white;
+  font-weight: 600;
   transition: 0.4s;
-  background: white;
+  background: #013a42;
 }
