--- a/src/css/forgot-password.css
+++ b/src/css/forgot-password.css
@@ -1,16 +1,13 @@
 :root {
-  --primary-color: #f9b225;
-  --secondary-color: #ffe194;
-  --terciary-color: #d11149;
-  --terciary2-color: #c83e4d;
-  --dark-color: #3f3d3b;
-  --white-color: #fff;
-  --light-grey-color: #f5f5f5;
-  --grey-color: #c4c4c4;
-
-  /* IMPROVE: Recomiendo poner mas fuentes como alternativas (al menos 3) */
-  --title-font: "Dosis", sans-serif;
-  --text-font: "Open Sans", sans-serif;
+  --orange: #f9b225;
+  --yellow: #ffe194;
+  --black: #3f3d3b;
+  --white: white;
+  --grey: #c4c4c4;
+  --lightgrey: #f5f5f5;
+  --green: #015865;
+  --title-font: "Dosis";
+  --text-font: "Open Sans";
 }
 
 body {
@@ -18,7 +15,7 @@ body {
   flex-direction: row;
   margin: 0;
   height: 100vh;
-  background-color: #f5f5f5;
+  background-color: var(--lightgrey);
 }
 
 .container-login {
@@ -30,9 +27,9 @@ body {
 }
 
 .logo {
-  width: 10rem;
-  height: 3rem;
+  width: 8rem;
   margin-bottom: 1rem;
+  cursor: pointer;
 }
 
 .container-login a {
@@ -41,7 +38,7 @@ body {
 
 p {
   font-family: var(--text-font);
-  color: var(--dark-color);
+  color: var(--black);
   font-size: 0.9rem;
   margin-bottom: 2rem;
 }
@@ -53,11 +50,11 @@ p {
   flex-direction: column;
   border-radius: 1.8rem;
   padding: 2.5rem 3.5rem;
-  background-color: var(--white-color);
+  background-color: var(--white);
 }
 
 .card-login p {
-  color: var(--grey-color);
+  color: var(--grey);
   font-family: var(--text-font);
   margin-top: 0;
   margin-bottom: 1rem;
@@ -68,12 +65,12 @@ input {
   font-size: 1rem;
   padding: 0.5rem;
   border-radius: 0.75rem;
-  border: var(--grey-color) 1px solid;
+  border: var(--grey) 0.06rem solid;
 }
 
 input:focus {
-  color: var(--dark-color);
-  outline-color: var(--dark-color);
+  color: var(--black);
+  outline-color: var(--black);
 }
 
 .btn {
@@ -89,12 +86,12 @@ input:focus {
   font-weight: 600;
   margin-top: 2rem;
   margin-bottom: 3rem;
-  background-color: var(--primary-color);
-  color: var(--dark-color);
+  background-color: var(--orange);
+  color: var(--black);
 }
 
 .btn:hover {
   background-color: #e6a422;
-  color: var(--dark-color);
+  color: var(--black);
   cursor: pointer;
 }
