--- a/src/css/options-newuser.css
+++ b/src/css/options-newuser.css
@@ -1,16 +1,13 @@
 :root {
-  --primary-color: #f9b225;
-  --secondary-color: #ffe194;
-  --terciary-color: #d11149;
-  --terciary2-color: #c83e4d;
-  --dark-color: #3f3d3b;
-  --white-color: #fff;
-  --light-grey-color: #f5f5f5;
-  --grey-color: #c4c4c4;
-
-  /* IMPROVE: Recomiendo poner mas fuentes como alternativas (al menos 3) */
-  --title-font: "Dosis", sans-serif;
-  --text-font: "Open Sans", sans-serif;
+  --orange: #f9b225;
+  --yellow: #ffe194;
+  --black: #3f3d3b;
+  --white: white;
+  --grey: #c4c4c4;
+  --lightgrey: #f5f5f5;
+  --green: #015865;
+  --title-font: "Dosis";
+  --text-font: "Open Sans";
 }
 
 body {
@@ -28,26 +25,26 @@ body {
 
 h1 {
   font-family: var(--text-font);
-  font-size: 2.6rem;
+  font-size: 2.3rem;
   font-weight: 700;
-  color: var(--dark-color);
+  color: var(--black);
   text-align: center;
   margin: 0;
 }
 
-h2 {
+p {
   font-family: var(--text-font);
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 600;
-  color: var(--dark-color);
+  color: var(--black);
   text-align: center;
-  margin-top: 0.2rem;
+  margin-top: 0.5rem;
 }
 
-h3 {
+a p {
   font-family: var(--text-font);
   font-weight: 700;
-  color: var(--dark-color);
+  color: var(--black);
   font-size: 1.2rem;
   margin-top: 1.2rem;
 }
@@ -67,23 +64,33 @@ img {
   margin-top: 1.3rem;
 }
 
-button {
-  background-color: var(--secondary-color);
+a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--green);
   width: 25%;
   height: 80%;
   border-style: none;
   border-radius: 2rem;
+  text-decoration: none;
 }
 
-button:hover {
-  background-color: #dbc282;
+a:hover {
+  background-color: #013a42;
   cursor: pointer;
 }
 
 .adopt {
-  background-color: var(--primary-color);
+  background-color: var(--orange);
 }
 
 .adopt:hover {
   background-color: #cc9320;
+}
+
+.give-in-adoption p {
+  color: white;
+  font-weight: 600;
 }
