--- a/src/css/index.css
+++ b/src/css/index.css
@@ -285,7 +285,7 @@ a {
 
 .home h1 img {
   width: 1.5rem;
-  margin-bottom: -0.2rem;
+  margin-bottom: -0.7rem;
 }
 
 .home p {
@@ -716,7 +716,8 @@ footer .copyright p {
   }
 
   .home h1 img {
-    width: 2rem;
+    width: 1.8rem;
+    margin-bottom: -0.5rem;
   }
 
   .adoption h2 {
@@ -886,6 +887,10 @@ footer .copyright p {
     font-size: 4rem;
   }
 
+  .home h1 img {
+    margin-bottom: -0.2rem;
+  }
+
   .topbar .logo {
     left: 10rem;
   }
@@ -954,13 +959,14 @@ footer .copyright p {
     background: var(--orange);
     position: absolute;
     top: 4rem;
-    right: -0.5rem;
+    right: -4.4rem;
     width: fit-content;
     height: fit-content;
-    padding: 1.5rem 1rem;
+    padding: 2rem 2.5rem;
     visibility: hidden;
     opacity: 0;
     transition: 0.3s linear;
+    line-height: 2rem;
   }
 
   .topbar .desktop .display.active .profile {
