html y css mejoras

--- a/src/css/filter-animals.css
+++ b/src/css/filter-animals.css
@@ -36,23 +36,9 @@ h1 {
 h2 {
   font-family: var(--text-font);
   color: var(--black);
-  font-size: 2rem;
-  margin: 0 1rem;
-}
-
-h3 {
-  font-family: var(--text-font);
-  color: var(--black);
-  font-size: 1.25rem;
+  font-size: 1.4rem;
   font-weight: 600;
-}
-
-h4 {
-  font-family: var(--text-font);
-  color: var(--black);
-  font-size: 1rem;
-  font-weight: 600;
-  margin: 0;
+  margin-bottom: 0;
 }
 
 p {
@@ -71,6 +57,16 @@ ul {
 a {
   text-decoration: none;
   margin: 0;
+}
+
+select {
+  width: 9rem;
+  height: 2.5rem;
+  text-align: center;
+  background: var(--lightgrey);
+  font-family: var(--text-font);
+  font-weight: 500;
+  border: none;
 }
 
 /* ----------------------------------- */
@@ -267,18 +263,17 @@ a {
 /* ---------------------------------- */
 
 .searcher {
-  width: 90vw;
-  height: 300vh;
+  width: 85vw;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(20, 1fr);
   grid-column-gap: 0;
   grid-row-gap: 0;
-  margin: 0 2rem;
+  margin: 0 7rem;
 }
 
 .results {
-  grid-area: 1 / 2 / 2 / 5;
+  grid-area: 1 / 3 / 2 / 7;
   height: fit-content;
   display: flex;
   justify-content: space-between;
@@ -292,84 +287,99 @@ a {
 
 .results select {
   background: var(--white);
-  margin-right: 6rem;
+  margin-right: 4.5rem;
   width: 13rem;
   height: 3rem;
-  border-right: 16px solid transparent;
+  border-right: 1rem solid transparent;
   font-size: 1rem;
 }
 
-select {
-  width: 9rem;
-  height: 2.5rem;
-  text-align: center;
-  background: var(--lightgrey);
-  font-family: var(--text-font);
-  font-weight: 500;
-  border: none;
-}
-
 .group {
-  grid-area: 2 / 2 / 6 / 5;
+  grid-area: 2 / 3 / 21 / 7;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   justify-content: center;
-  align-content: center;
-  margin: -10rem 0 5rem;
+  align-content: flex-start;
+  row-gap: 3rem;
+  column-gap: 3rem;
+  margin-right: 2rem;
 }
 
 .card {
-  position: relative;
-  width: 15rem;
-  height: 20rem;
+  width: 16rem;
+  height: 22rem;
   display: grid;
-  grid-template-rows: repeat(1, 3fr 1fr 1fr);
-  flex-direction: column;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, 1fr);
   justify-content: center;
-  align-items: center;
+  justify-items: center;
   text-align: center;
-  border-radius: 1rem;
+  border-radius: 1.2rem;
   box-shadow: 0 0 0.5rem  rgb(146 146 146 / 50%);
-  overflow: hidden;
   cursor: pointer;
+  background: var(--white);
 }
 
-.card img {
-  width: 19rem;
+.img-container {
+  grid-area: 1 / 1 / 6 / 2;
+  width: 22rem;
   height: 15rem;
-  border-radius: 1rem 1rem 45% 45%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  border-radius: 1.2rem 1.2rem 48% 47%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.img-container img {
+  width: 16rem;
+  min-height: 15rem;
+  object-fit: cover;
 }
 
 .card p img {
   width: 1rem;
   height: 1rem;
   margin-right: 0.2rem;
+  object-fit: contain;
+}
+
+.card h2 {
+  grid-area: 6 / 1 / 7 / 2;
+  margin-top: 1.2rem;
 }
 
 .card p {
-  margin-top: -2rem;
-  margin-left: -1rem;
+  grid-area: 7 / 1 / 9/ 2;
+  width: 16rem;
+  margin-top: 0.3rem;
 }
 
 .filter {
-  grid-area: 1 / 1 / 6 / 2;
+  grid-area: 1 / 1 / 21 / 3;
   background: var(--white);
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  justify-content: center;
   width: 80%;
-  justify-self: center;
-  justify-items: center;
-}
-
-.choose {
-  gap: 2rem;
   display: flex;
   flex-direction: column;
-  margin-top: 7rem;
+  align-items: center;
+  gap: 1rem;
+}
+
+.filter p {
+  font-weight: 600;
+  margin: 1.5rem 0 0 0.5rem;
+  width: 17rem;
+  text-align: left;
+}
+
+.filter p:first-child {
+  margin-top: 13rem;
+}
+
+.filter select {
+  width: 17rem;
+  height: 3.3rem;
+  appearance: none;
+  border-radius: 0.5rem;
 }
 
 .btn-search {
@@ -464,10 +474,6 @@ footer .copyright p {
 
   }
 
-  h2 {
-    font-size: 2.2rem;
-  }
-
   p {
     font-size: 0.9rem;
   }
@@ -516,10 +522,6 @@ footer .copyright p {
 @media screen and (min-width: 1170px) {
   h1 {
 
-  }
-
-  h2 {
-    font-size: 2.5rem;
   }
 
   p {
