--- a/src/css/index.css
+++ b/src/css/index.css
@@ -375,30 +375,50 @@ a {
   width: 16rem;
   height: 22rem;
   display: grid;
-  grid-template-rows: repeat(1, 3fr 1fr 1fr);
-  flex-direction: column;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, 1fr);
   justify-content: center;
-  align-items: center;
+  justify-items: center;
   text-align: center;
-  border-radius: 1rem;
+  border-radius: 1.2rem;
   box-shadow: 0 0 0.5rem  rgb(146 146 146 / 50%);
+  cursor: pointer;
+  background: var(--white);
   overflow: hidden;
 }
 
-.adoption .group .card img {
-  height: 15.2rem;
-  border-radius: 1rem 1rem 0 0;
+.adoption .group .img-container {
+  grid-area: 1 / 1 / 6 / 2;
+  width: 22rem;
+  height: 15rem;
+  border-radius: 1.2rem 1.2rem 48% 47%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.adoption .group .img-container img {
+  width: 16rem;
+  min-height: 15rem;
+  object-fit: cover;
 }
 
 .adoption .group .card p img {
   width: 1rem;
   height: 1rem;
   margin-right: 0.2rem;
+  object-fit: contain;
+}
+
+.adoption .group .card h3 {
+  grid-area: 6 / 1 / 7 / 2;
+  margin-top: 1.2rem;
 }
 
 .adoption .group .card p {
-  margin-top: -2rem;
-  margin-left: -1rem;
+  grid-area: 7 / 1 / 9/ 2;
+  width: 16rem;
+  margin-top: 0.3rem;
 }
 
 .adoption .group .card-extra {
@@ -907,13 +927,15 @@ footer .copyright p {
     right: 8rem;
   }
 
-  .topbar .desktop a {
+  .topbar .desktop a,
+  .topbar .desktop .display li {
     color: var(--black);
     font-family: var(--text-font);
     font-size: 0.9rem;
     font-weight: 600;
     text-decoration: none;
     transition: color 0.5s;
+    cursor: pointer;
   }
 
   .topbar .desktop img {
@@ -921,8 +943,8 @@ footer .copyright p {
     transition: 0.1s;
   }
 
-  .topbar .desktop img:hover {
-    filter: invert(17%) sepia(40%) saturate(6264%) hue-rotate(329deg) brightness(98%) contrast(103%);
+  .topbar .desktop .display img {
+    width: 1.6rem;
   }
 
   .topbar .desktop .vertical-line {
@@ -932,8 +954,39 @@ footer .copyright p {
     background-color: var(--black);
   }
 
-  .topbar .desktop a:hover {
+  .topbar .desktop a:hover,
+  .topbar .desktop .display p:hover {
     color: var(--orange);
+  }
+
+  .topbar .desktop .profile a:hover {
+    color: var(--green);
+  }
+
+  .topbar .desktop .display {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 0.4rem;
+    align-items: center;
+  }
+
+  .topbar .desktop .display .profile {
+    background: var(--orange);
+    position: absolute;
+    top: 4rem;
+    right: -4.4rem;
+    width: fit-content;
+    height: fit-content;
+    padding: 2rem 2.5rem;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s linear;
+    line-height: 2rem;
+  }
+
+  .topbar .desktop .display.active .profile {
+    visibility: visible;
+    opacity: 1;
   }
 
   .home p {
