--- a/src/css/formulario.css
+++ b/src/css/formulario.css
@@ -104,7 +104,7 @@ input {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   gap: 4rem;
   border-radius: 12px;
 }
@@ -190,6 +190,7 @@ input {
 }
 
 /* FORMULARIO */
+
 .formulario {
   width: 100%;
   height: 100rem;
@@ -198,8 +199,11 @@ input {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(7, 1fr);
+  justify-content: center;
+  align-content: center;
   border-radius: 12px;
-  padding: 0 15rem;
+
+  /* padding: 0 15rem; */
   gap: 2rem;
 }
 
@@ -215,7 +219,7 @@ input {
 .name input,
 .species input,
 .age input {
-  width: 70%;
+  width: 100%;
 }
 
 .species {
@@ -239,11 +243,30 @@ input {
   grid-row: 4/7;
 }
 
-.description input {
+.description textarea {
   width: 100%;
   height: 100%;
 }
 
 .images {
   padding-top: 5rem;
+  grid-column: 1/3;
+}
+
+.uploadImages {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.save {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.submit {
+  width: 12rem;
+  grid-column: 4/6;
 }
