--- a/src/css/filter-animals.css
+++ b/src/css/filter-animals.css
@@ -67,10 +67,10 @@ select {
   font-family: var(--text-font);
   font-weight: 500;
   border: none;
+  cursor: pointer;
 }
 
 /* ----------------------------------- */
-
 .topbar {
   width: 100%;
   height: 5rem;
@@ -99,6 +99,10 @@ select {
   text-decoration: none;
   transition: color 0.5s;
 }
+
+/* .topbar a:hover {
+  text-decoration: underline;
+} */
 
 .topbar .burger-img {
   width: 3rem;
@@ -201,7 +205,7 @@ select {
 }
 
 .topbar .burger.active .menu .icons img:hover {
-  filter: brightness(0) saturate(100%) invert(23%) sepia(29%) saturate(3149%) hue-rotate(157deg) brightness(97%) contrast(99%);
+  filter: invert(95%) sepia(98%) saturate(6680%) hue-rotate(325deg) brightness(92%) contrast(112%);
   border: 0.1rem solid var(--orange);
   border-radius: 20%;
 }
@@ -239,25 +243,24 @@ select {
 /* ----------------------- */
 .home {
   width: 100%;
-  height: 30vh;
+  height: 40vh;
   background: var(--green);
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: end;
   flex-direction: column;
-  text-align: left;
   gap: 0.4rem;
+  text-align: center;
 }
 
 .home h1 {
-  margin: 6rem 10rem 0;
+  font-size: 1.5rem;
 }
 
 .home p {
-  font-size: 1.7rem;
+  font-size: 1rem;
   font-weight: 600;
   color: var(--white);
-  margin: -0.3rem 10.1rem 1rem;
+  margin: 1rem 2rem 1.5rem;
 }
 
 /* ---------------------------------- */
@@ -265,23 +268,21 @@ select {
 .searcher {
   width: 85vw;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(20, 1fr);
-  margin: 0 7rem;
+  justify-items: center;
+  margin: auto;
+  text-align: center;
 }
 
 .results {
-  grid-area: 1 / 3 / 2 / 7;
-  height: fit-content;
+  height: 100%;
   display: flex;
-  justify-content: space-between;
-  margin-top: 5rem;
+  flex-direction: column;
+  margin: 3rem 0;
 }
 
 .results p {
   font-size: 1.7rem;
   font-weight: 600;
-  margin-left: -2.5rem;
 }
 
 .results select {
@@ -289,19 +290,16 @@ select {
   width: 13rem;
   height: 3rem;
   border-right: 1rem solid transparent;
-  font-size: 1rem;
-  margin-right: -1rem;
+  margin: 1rem auto 0;
 }
 
 .group {
-  grid-area: 2 / 3 / 21 / 7;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   justify-content: center;
   align-content: flex-start;
-  row-gap: 3rem;
-  column-gap: 3rem;
-  margin-right: 2rem;
+  gap: 2rem;
+  margin-bottom: 5rem;
 }
 
 .card {
@@ -355,35 +353,7 @@ select {
 }
 
 .filter {
-  grid-area: 1 / 1 / 21 / 3;
-  background: var(--white);
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-}
-
-.filter p {
-  font-weight: 600;
-  margin: 1.5rem 0 0 0.5rem;
-  width: 17rem;
-  text-align: left;
-}
-
-.filter p:first-child {
-  margin-top: 13rem;
-}
-
-.filter select {
-  width: 17rem;
-  height: 3.3rem;
-  appearance: none;
-  border-radius: 0.5rem;
-}
-
-.btn-search {
-  height: 2rem;
+  display: none;
 }
 
 /* ------------------------- */
@@ -486,6 +456,68 @@ footer .copyright p {
     right: 5rem;
   }
 
+  .home {
+    height: 30vh;
+  }
+
+  .home h1 {
+  }
+
+  .home p {
+    margin-bottom: 4rem;
+  }
+
+  .searcher {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(60, 1fr);
+    margin: 0 auto;
+    width: 95%;
+  }
+
+  .results {
+    grid-area: 1/ 3 / 2 / 7;
+  }
+
+  .group {
+    grid-area: 2 / 3 / 61 / 7;
+  }
+
+  .filter {
+    grid-area: 1 / 1 / 61 / 3;
+    background: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.2rem;
+    margin-left: -2rem;
+    width: 100%;
+  }
+
+  .filter p {
+    font-weight: 600;
+    width: 10rem;
+    text-align: left;
+  }
+
+  .filter p:first-child {
+    margin-top: 5rem;
+  }
+
+  .filter select {
+    width: 10rem;
+    height: 3.3rem;
+    appearance: none;
+    border-radius: 0.5rem;
+  }
+
+  .btn-search {
+    margin-top: 3rem;
+    width: 10rem;
+    height: 3rem;
+    border-radius: 3rem;
+    background: var(--orange);
+  }
+
   footer {
     height: 40vh;
   }
@@ -520,12 +552,57 @@ footer .copyright p {
 }
 
 @media screen and (min-width: 1170px) {
-  h1 {
-
+  .home {
+    display: flex;
+    justify-content: end;
+    align-items: flex-start;
+    flex-direction: column;
+    text-align: left;
+    gap: 0.4rem;
   }
 
-  p {
+  .home h1 {
+    margin: 0 3rem;
+  }
+
+  .home p {
+    margin: 0.5rem 3.2rem 2rem;
     font-size: 1rem;
+  }
+
+  .searcher {
+    grid-template-rows: none;
+  }
+
+  .results {
+    height: fit-content;
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+    align-items: flex-start;
+  }
+
+  .results select {
+    margin: 1rem 0;
+  }
+
+  .group {
+    width: 85%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-area: 2 / 3 / 30 / 7;
+  }
+
+  .filter {
+    width: 85%;
+    margin: 0;
+  }
+
+  .filter p {
+    width: 17rem;
+  }
+
+  .filter select {
+    width: 17rem;
   }
 
   footer .information {
@@ -545,10 +622,6 @@ footer .copyright p {
 }
 
 @media screen and (min-width: 1300px) {
-  h1 {
-    font-size: ;
-  }
-
   .topbar .logo {
     left: 10rem;
   }
@@ -570,13 +643,16 @@ footer .copyright p {
     right: 8rem;
   }
 
-  .topbar .desktop a {
+  .topbar .desktop a,
+  .topbar .desktop .display li,
+  .topbar .desktop .display p {
     color: var(--black);
     font-family: var(--text-font);
     font-size: 0.9rem;
     font-weight: 600;
     text-decoration: none;
     transition: color 0.5s;
+    cursor: pointer;
   }
 
   .topbar .desktop img {
@@ -584,8 +660,8 @@ footer .copyright p {
     transition: 0.1s;
   }
 
-  .topbar .desktop img:hover {
-    filter: invert(17%) sepia(40%) saturate(6264%) hue-rotate(329deg) brightness(98%) contrast(103%);
+  .topbar .desktop .display img {
+    width: 1.6rem;
   }
 
   .topbar .desktop .vertical-line {
@@ -595,8 +671,82 @@ footer .copyright p {
     background-color: var(--black);
   }
 
-  .topbar .desktop a:hover {
+  .topbar .desktop a:hover,
+  .topbar .desktop .display p:hover {
     color: var(--orange);
+  }
+
+  .topbar .desktop .profile a:hover {
+    color: var(--green);
+  }
+
+  .topbar .desktop .display {
+    display: none;
+    grid-auto-flow: column;
+    gap: 0.4rem;
+    align-items: center;
+  }
+
+  .topbar .desktop .display .profile {
+    background: var(--orange);
+    position: absolute;
+    top: 4rem;
+    right: -4.4rem;
+    width: fit-content;
+    height: fit-content;
+    padding: 2rem 2.5rem;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s linear;
+    line-height: 2rem;
+  }
+
+  .topbar .desktop .display.active .profile {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .home h1 {
+    margin-left: 10rem;
+    font-size: 1.7rem;
+  }
+
+  .home p {
+    font-size: 1.5rem;
+    margin: 0 0 3rem 10.1rem;
+  }
+
+  .searcher {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(20, 1fr);
+    margin: 0 auto;
+    width: 85vw;
+  }
+
+  .results {
+    grid-area: 1 / 3 / 2 / 7;
+    justify-content: space-between;
+    margin-top: 5rem;
+    flex-flow: row;
+    width: 100%;
+  }
+
+  .results p {
+    margin: 0;
+  }
+
+  .results select {
+    margin: -0.5rem 0 0;
+  }
+
+  .group {
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    justify-items: center;
+  }
+
+  .filter {
+    margin-left: -10rem;
   }
 
   footer .information {
@@ -605,5 +755,11 @@ footer .copyright p {
 
   footer .information .two {
     right: 19vw;
+  }
+}
+
+@media screen and (min-width: 1750px) {
+  .group {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
