--- a/src/css/formulario.css
+++ b/src/css/formulario.css
@@ -8,117 +8,260 @@
   --green: #015865;
   --title-font: "Dosis";
   --text-font: "Open Sans";
-
-  /* variables del footer */
-  --footer-bg: #3f3d3b;
-  --color: #f2f3fb;
-  --color-smooth: #9da2ae;
-  --btn-bg-color: #f1f2fc;
-  --btn-hover-bg: #d5d9f6;
-  --btn-color: #1e2641;
 }
 
-*,
-*::before,
-*::after {
+/* 1rem = 10px */
+
+body {
+  min-height: 100vh;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
+  background: var(--lightgrey);
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 html {
-  font-size: 62.5%;
+  scroll-behavior: smooth;
+  display: inline-block;
+  overflow-x: hidden;
 }
 
-body {
+h1 {
+  color: var(--black);
+  font-family: var(--text-font);
+  font-weight: 500;
+  font-size: 2.4rem;
+  margin: 6rem 1rem 1rem;
+  justify-self: left;
+  width: 85%;
+}
+
+h2 {
+  font-family: var(--text-font);
+  color: var(--black);
+  font-size: 2rem;
+  margin: 0 1rem;
+}
+
+p {
+  font-family: var(--text-font);
+  color: var(--black);
+  font-weight: 400;
+  font-size: 0.8rem;
   margin: 0;
 }
 
-input {
-  border-radius: 5px;
-  background-color: var(--lightgrey);
+ul {
+  list-style: none;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  margin: 0;
+}
+
+.button {
+  background: var(--orange);
+  color: var(--black);
+  padding: 0.8rem 2rem;
+  display: inline-block;
+  text-decoration: none;
+  border-radius: 3rem;
+  font-family: var(--text-font);
+  font-size: 1em;
+  font-weight: 600;
+  transition: 0.5s ease-out;
+}
+
+.button:hover {
+  background: #cc9320;
 }
 
 .topbar {
   width: 100%;
-  height: calc(0.75 / 8 * 100vh);
-
-  /* 100vw da problema de overflow horizontal */
+  height: 5rem;
+  background: var(--white);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 0 0.125rem 0.25rem 0 rgb(0 0 0 / 20%);
+  z-index: 1;
 }
 
-.topbar img {
-  width: 14rem;
+.topbar .logo {
+  width: 7rem;
+  position: relative;
+  left: 3rem;
 }
 
-.topbar-nav {
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 3rem;
-}
-
-.topbar-nav a {
+.topbar a {
   color: var(--black);
   font-family: var(--text-font);
-  font-size: 1.8rem;
+  font-size: 1rem;
   font-weight: 600;
   text-decoration: none;
+  transition: color 0.5s;
 }
 
-.topbar-nav a:last-child {
+.topbar .burger-img {
+  width: 3rem;
+  height: 3rem;
+  background: url("../assets/icons/menu-icon.svg");
+  background-size: 2rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  position: absolute;
+  right: 1.5rem;
+}
+
+.topbar .burger-img.active {
+  background: url("../assets/icons/menu-exit.svg");
+  background-size: 1.3rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: 1s linear;
+  z-index: 2;
+  position: absolute;
+  top: 1.5rem;
+}
+
+.topbar .burger {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.topbar .burger.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.topbar .burger .menu {
+  max-width: 42rem;
+  width: 1vw;
+  height: 100%;
+  background: white;
+  position: fixed;
+  top: 0;
+  right: 0;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.topbar .burger.active .menu {
+  width: 85vw;
+  transition: 0.7s linear;
+  visibility: visible;
+  opacity: 1;
+}
+
+.topbar .burger.active .opacity {
+  background: rgb(50 48 53/100%);
+  opacity: 0.6;
+  width: 100vw;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+
+.topbar .burger.active .menu ul {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: 7rem;
+  left: 3rem;
+  line-height: 4rem;
+  padding: 0;
+}
+
+.topbar .burger.active .menu ul a {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.topbar .burger.active .menu ul a:hover {
   color: var(--orange);
 }
 
-.topbar-nav img {
-  width: 2rem;
+.topbar .burger.active .menu .icons {
+  display: grid;
+  width: 8rem;
+  grid-auto-columns: repeat(4, 1fr);
+  grid-auto-flow: column;
+  justify-items: center;
+  transition: color 0.5s;
+  position: absolute;
+  top: 24rem;
+  left: 2.4rem;
 }
 
-.vertical-line {
-  display: inline-block;
-  height: 3rem;
-  width: 1px;
+.topbar .burger.active .menu .icons img {
+  width: 1.7rem;
+  height: 1.7rem;
+  position: absolute;
+}
+
+.topbar .burger.active .menu .icons img:hover {
+  filter: invert(95%) sepia(98%) saturate(6680%) hue-rotate(325deg) brightness(92%) contrast(112%);
+  border: 0.1rem solid var(--orange);
+  border-radius: 20%;
+}
+
+.topbar .burger.active .menu .m-footer {
+  width: 100%;
+  height: 9%;
+  position: absolute;
+  bottom: 0;
+  background: var(--orange);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.topbar .burger.active .menu .m-footer .button {
+  width: 100%;
+  height: 100%;
+  border-radius: 0%;
+  color: var(--black);
   background-color: var(--orange);
+  font-size: 1.2rem;
+  font-weight: 700;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.topbar .desktop {
+  display: none;
 }
 
 /* PROFILE SECTION */
-.main-section {
-  width: 100%;
+.home {
+  width: 68vw;
   height: 2000px;
-  background-color: #f2f2f2;
-  padding: 10rem 35rem;
+  background: var(--white);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-
-.profile {
-  width: 100%;
-
-  /* height: calc(1/2 * 100vh); */
-  background-color: var(--white);
-  padding: 8rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
-  gap: 4rem;
-  border-radius: 12px;
-}
-
-.profile h2 {
-  color: var(--black);
-  font-family: var(--text-font);
-  font-size: 32px;
-  font-weight: 600;
-  margin: 0;
+  margin: 30vh 10vh;
+  border-radius: 1rem;
 }
 
 .sections {
-  width: 100%;
+  width: 58vw;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   justify-content: center;
@@ -163,14 +306,6 @@ input {
   cursor: pointer;
 }
 
-.profile-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 4rem;
-}
-
 .new-animal-link {
   width: 17rem;
   height: 5rem;
@@ -191,24 +326,37 @@ input {
 
 /* FORMULARIO */
 
-.formulario {
-  width: 100%;
-  height: 100rem;
-  background-color: var(--white);
-  margin-top: 10rem;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(7, 1fr);
-  justify-content: center;
-  align-content: center;
-  border-radius: 12px;
+.profile-content {
+  width: 52vw;
+  margin: 2rem 0;
+}
 
-  /* padding: 0 15rem; */
-  gap: 2rem;
+.formulario {
+  margin-top: 1rem;
+  display: grid;
+  width: 100%;
+}
+
+select {
+  background: var(--lightgrey);
+  width: 100%;
+  height: 2.5rem;
+  appearance: none;
+  border-radius: 0.5rem;
+  border: none;
+}
+
+input {
+  height: 2.5rem;
+  appearance: none;
+  border-radius: 0.5rem;
+  background: var(--lightgrey);
+  width: 100%;
+  border: none;
 }
 
 .name {
-  width: 100%;
+  width: 18rem;
   grid-column: 1/3;
   display: flex;
   flex-direction: column;
@@ -216,13 +364,12 @@ input {
   align-items: flex-start;
 }
 
-.name input,
-.species input,
-.age input {
-  width: 100%;
+.location {
+  width: 18rem;
 }
 
 .species {
+  width: 18rem;
   grid-column: 3/5;
   display: flex;
   flex-direction: column;
@@ -231,6 +378,7 @@ input {
 }
 
 .age {
+  width: 9rem;
   grid-column: 5/6;
   display: flex;
   flex-direction: column;
@@ -239,18 +387,27 @@ input {
 }
 
 .description {
+  height: 10rem;
   grid-column: 1/6;
   grid-row: 4/7;
 }
 
 .description textarea {
+  background: var(--lightgrey);
+  border-radius: 0.5rem;
+  border: none;
   width: 100%;
   height: 100%;
 }
 
 .images {
+  width: 100%;
   padding-top: 5rem;
   grid-column: 1/3;
+}
+
+.fileinput {
+  width: 100%;
 }
 
 .uploadImages {
@@ -269,4 +426,239 @@ input {
 .submit {
   width: 12rem;
   grid-column: 4/6;
+}
+
+footer {
+  width: 100%;
+  height: 80vh;
+  background: var(--black);
+}
+
+footer .column p {
+  color: var(--white);
+  font-size: 1rem;
+  margin: 0.5rem 0 0;
+  font-weight: 700;
+}
+
+footer p {
+  color: var(--white);
+}
+
+footer a {
+  color: var(--white);
+  font-family: var(--text-font);
+  font-size: 0.8rem;
+  font-weight: 400;
+}
+
+footer .information {
+  height: 85%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
+  align-items: flex-start;
+  gap: 5vh;
+  margin: 0 2rem;
+}
+
+footer .information .column {
+  width: 10rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-self: center;
+  text-align: center;
+  line-height: 0.8rem;
+  position: relative;
+}
+
+footer .information .column .mail {
+  text-decoration: underline;
+}
+
+footer .information .column img {
+  height: 1.4rem;
+  margin-top: -1rem;
+}
+
+footer .information .column .social img {
+  filter: invert(50%) sepia(1%) saturate(43%) hue-rotate(270deg) brightness(109%) contrast(101%);
+  width: 1.3rem;
+  height: 1.3rem;
+  margin: 1rem 0.3rem 0;
+}
+
+footer .information .column a {
+  margin: 0.6rem 0 0;
+}
+
+footer .copyright {
+  width: 100%;
+  height: 15%;
+  text-align: center;
+}
+
+footer .copyright .horizontal-line {
+  width: 70%;
+  margin-top: -1rem;
+}
+
+footer .copyright p {
+  margin: 1rem;
+}
+
+/* <!-- -----------------------------MEDIAQUERY------------------------ --> */
+@media screen and (min-width: 767px) {
+  .topbar .logo {
+    left: 4rem;
+  }
+
+  .topbar .burger-img {
+    right: 5rem;
+  }
+
+  footer {
+    height: 40vh;
+  }
+
+  footer .column p {
+    margin-bottom: 1rem;
+  }
+
+  footer p {
+    font-size: 1rem;
+  }
+
+  footer a {
+    font-size: 1rem;
+  }
+
+  footer .information {
+    flex-direction: row;
+    gap: 6rem;
+  }
+
+  footer .information .two {
+    order: 1;
+    margin-top: -1rem;
+  }
+
+  footer .information .column {
+    text-align: left;
+    line-height: 1.5rem;
+    width: 12rem;
+  }
+}
+
+@media screen and (min-width: 1170px) {
+  footer .information {
+    gap: 3vw;
+    justify-content: flex-start;
+    margin: 0 15vw;
+  }
+
+  footer .information .column {
+    width: 13rem;
+  }
+
+  footer .information .two {
+    position: absolute;
+    right: 15vw;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .topbar .logo {
+    left: 10rem;
+  }
+
+  .topbar .burger-img {
+    display: none;
+  }
+
+  .topbar .burger.active {
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  .topbar .desktop {
+    display: flex;
+    gap: 2rem;
+    position: absolute;
+    align-items: center;
+    right: 8rem;
+  }
+
+  .topbar .desktop a,
+  .topbar .desktop .display li,
+  .topbar .desktop .display p {
+    color: var(--black);
+    font-family: var(--text-font);
+    font-size: 0.9rem;
+    font-weight: 600;
+    text-decoration: none;
+    transition: color 0.5s;
+    cursor: pointer;
+  }
+
+  .topbar .desktop img {
+    width: 1rem;
+    transition: 0.1s;
+  }
+
+  .topbar .desktop .display img {
+    width: 1.6rem;
+  }
+
+  .topbar .desktop .vertical-line {
+    display: inline-block;
+    height: 3rem;
+    width: 0.1rem;
+    background-color: var(--black);
+  }
+
+  .topbar .desktop a:hover,
+  .topbar .desktop .display p:hover {
+    color: var(--orange);
+  }
+
+  .topbar .desktop .profile a:hover {
+    color: var(--green);
+  }
+
+  .topbar .desktop .display {
+    display: none;
+    grid-auto-flow: column;
+    gap: 0.4rem;
+    align-items: center;
+  }
+
+  .topbar .desktop .display .profile {
+    background: var(--orange);
+    position: absolute;
+    top: 4rem;
+    right: -4.4rem;
+    width: fit-content;
+    height: fit-content;
+    padding: 2rem 2.5rem;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s linear;
+    line-height: 2rem;
+  }
+
+  .topbar .desktop .display.active .profile {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  footer .information {
+    margin: 0 19vw;
+  }
+
+  footer .information .two {
+    right: 19vw;
+  }
 }
