cambios login y logout de todas las pantallas

--- a/src/css/filter-animals.css
+++ b/src/css/filter-animals.css
@@ -516,6 +516,7 @@ footer .copyright p {
     height: 3rem;
     border-radius: 3rem;
     background: var(--orange);
+    border: 0px;
   }
 
   footer {
